--- a/app/src/main/res/drawable/view_unselect.xml
+++ b/app/src/main/res/drawable/view_unselect.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="24dp"/>
-            <solid android:color="#EEEEEE"/>
+            <solid android:color="#FFFFFF"/>
         </shape>
     </item>
 </selector>
